# migrate_ripgrep

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  aider_wrapper.py  bld.go  migrate_ripgrep_test.go  requirements_lock.txt
