load("@rules_go//go:def.bzl", "go_test")
load("@rules_python//python:defs.bzl", "py_binary")

go_test(
	name = "migrate_ripgrep_test",
	srcs = ["migrate_ripgrep_test.go"],
	deps = ["@io_bazel_rules_go//go/runfiles"],
)

py_binary(
    name = "aider",
    srcs = ["aider_wrapper.py"],
    main = "aider_wrapper.py",
    deps = ["@pip//aider_chat:pkg"],
    visibility = ["//visibility:public"],
)
